siduxcc (0.5.6.2) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 12 Jul 2007 00:02:24 +0200

siduxcc (0.5.6.1) unstable; urgency=low

  * siduxcc_network small design fix
  * siduxcc_kernel small design fix

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 11 Jul 2007 23:55:07 +0200

siduxcc (0.5.6) unstable; urgency=low

  * kernel-update function added
  * fix-font problem fixed
  * network script nicstatus added
  * siduxcc_network design changed
  * de-translation for the network-kioslave added
  * network script nicstatus added, again...

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 11 Jul 2007 22:56:00 +0200

siduxcc (0.5.5.8) unstable; urgency=low

  * Kernel remove button enable/disable bug fixed.

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 03 Jul 2007 11:30:48 +0200

siduxcc (0.5.5.7) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * fix FSF address, again...

  [ Fabian Wuertz ]
  * disable fix-fonts option

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 02 Jun 2007 20:34:10 +0200

siduxcc (0.5.5.6) unstable; urgency=low

  * copyright information added.

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 19 Jun 2007 23:07:10 +0200

siduxcc (0.5.5.5) unstable; urgency=low

  [ Fabian Wuertz ]
  * network kioslave added.

  [ Stefan Lippers-Hollmann ]
  * make networkbin handling generic (can't this be done with a parameter?).
  * fix lintian warnings.
  * fix FSF address.
  * bash modules must not be executable.
  * only recommend apt-show-versions after recent upstream changes.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 19 Jun 2007 18:38:38 +0200

siduxcc (0.5.5-4) unstable; urgency=low

  * network kioslave added.

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 18 Jun 2007 19:12:42 +0200

siduxcc (0.5.5-3) unstable; urgency=low

  * network kioslave added.
  * alternative netcarconfig-script removed.

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 18 Jun 2007 19:02:56 +0200

siduxcc (0.5.5-2) unstable; urgency=low
