@@ -1,8 +1,9 @@
 siduxcc (0.5.6.2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * apache v1.3 is about to be removed from debian, don't offer it in siduxcc.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 12 Jul 2007 00:02:24 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 12 Jul 2007 01:20:04 +0200
 
 siduxcc (0.5.6.1) unstable; urgency=low
 
